# PaintSheetGenerator

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  ColourByNumber.args.json  ColourByNumber.sln  ColourByNumber.vcxproj  ColourByNumber.vcxproj.filters  NOTICE  README.md
combined/: main.cc
headers/: borders.h  colourbook.h  helper.h  legend.h  paintsheet.h  segmenter.h  window.h
kmeans/: CMakeLists.txt  segmenter.cc  segmenter.h  segmenter_old.cc
legend/: legend.h  main.cpp
source/: CMakeLists.txt  CMakeSettings.json  colourbook.cc  helper.cc  legend.cc  main.cc  paintsheet.cc  segmenter.cc  window.cc
stage 3/: main.cpp
stage1/: segmenter.cc
stage2/: CMakeLists.txt  main.cc
stage3/: CMakeLists.txt
tests/: kmeans_elbow_method.py
